Fix alignment colour switch

--- a/src/assets/scss/dropdown.scss
+++ b/src/assets/scss/dropdown.scss
@@ -102,8 +102,9 @@
     }
 
     .dropdown-item {
-      padding: 0.5rem 0.75rem;
+      padding: 1rem 0.75rem;
       color: $black;
+      line-height: 1rem;
 
       &:hover {
         background-color: $lightblue-light;
@@ -120,6 +121,7 @@
         height: 1rem;
         width: 1rem;
         display: inline-block;
+        vertical-align: top;
       }
     }
 
